# tree-sitter-procman

./: .gitignore  Cargo.toml  README.md  binding.gyp  grammar.js  package-lock.json  package.json  tree-sitter.json  vim-integration.md
bindings/c/: tree-sitter-procman.h  tree-sitter-procman.pc.in
bindings/node/: binding.cc
bindings/rust/: build.rs  lib.rs
queries/: highlights.scm  indents.scm  locals.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: config.txt  expressions.txt  for.txt  full_example.txt  imports.txt  jobs.txt  module_refs.txt  namespaced.txt  tasks.txt  wait.txt  watch.txt
